# nanobot

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.agent_gateway  Dockerfile.bridge  Dockerfile.bucket_runtime  Dockerfile.container_up  Dockerfile.web_server  README.md  bridge_ou_e26391e335cf66c57e1ea6d29f987830___oc_f61e15a4ae39ef942331ecd8abb343b2.jsonl  docker-compose.bridge.yml  docker-compose.container-up.yml  nanobot_bucket_dynamic_scheduler_guide.md  nanobot_k8s_bucket_sdd.md  pyproject.toml  route.ps  start_nanobot_bridge.sh  start_org_router.sh
agent_gateway/: __init__.py  config.py  main.py
bridge_service/: README.md  __init__.py  app.py  client_demo.py  core.py  protocol.py  pyproject.toml  server.py
bucket_runtime/: __init__.py  config.py  local_service.py  main.py  port_allocator.py  process_manager.py  process_utils.py  uvicorn_logging.py  workspace_manager.py
container_up/: README.md  __init__.py  app.py  attachment_paths.py  attachments.py  binding_repository.py  bridge_hub.py  bridge_protocol.py  bridge_state.py  bucket_allocator.py  bucket_client.py  bucket_manager.py  bucket_scheduler.py  config.json  container_up.json  crypt_tools.py  db_store.py  dispatch.py  feishu_im_tool.py  frontend_config.py  gateway_router.py  http_state.py  im_tools.py  outbound_attachment_store.py  pyproject.toml  qxt_im_tool.py  router_service.py  settings.py  uvicorn_logging.py  web_im_tool.py  workspace_manager.py
docs/: DEPLOYMENT_MANUAL.md  K8S_BRANCH_LAYOUT.md  PROJECT_ARCHITECTURE.md
host_test_env/: config.json
nanobot/: local_service.py  org_router.py
scripts/: install-kind.sh
tests/: conftest.py  measure_debug_p2p_latency.py  test_agent_gateway_repository.py  test_attachment_paths_k8s.py  test_bridge_channel.py  test_bridge_service_core.py  test_bucket_manager.py  test_bucket_runtime_local_service.py  test_bucket_runtime_process_manager.py  test_bucket_runtime_workspace.py  test_bucket_scheduler.py  test_container_up_app_bridge_ws.py  test_container_up_attachments.py  test_container_up_bridge_hub.py  test_container_up_bridge_protocol.py  test_container_up_crypt_tools.py  test_container_up_dispatch.py  test_container_up_im_tools.py  (+9 more)
(+277 files in other folders)
