[project]
name = "nanobot-bridge-service"
version = "0.1.0"
description = "Standalone FastAPI bridge service for nanobot"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "nanobot contributors" }
]
dependencies = [
    "fastapi>=0.116.0,<1.0.0",
    "uvicorn>=0.35.0,<1.0.0",
    "websockets>=16.0,<17.0",
    "httpx>=0.28.0,<1.0.0",
    "pydantic>=2.12.0,<3.0.0",
]

[project.scripts]
nanobot-bridge-service = "bridge_service.server:main"
nanobot-bridge-demo = "bridge_service.client_demo:main"

[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["bridge_service"]

[tool.setuptools.package-dir]
bridge_service = "."
