[project]
name = "nanobot-container-up"
version = "0.1.0"
description = "Top-level client entrypoint for dynamic nanobot bridge containers"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "nanobot contributors" }
]
dependencies = [
    "fastapi>=0.116.0,<1.0.0",
    "uvicorn>=0.35.0,<1.0.0",
    "websockets>=15.0.1,<16.0.0",
    "httpx>=0.28.0,<1.0.0",
    "docker>=7.1.0,<8.0.0",
    "pydantic>=2.12.0,<3.0.0",
]

[project.scripts]
nanobot-container-up = "container_up.app:main"

[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["container_up"]

[tool.setuptools.package-dir]
container_up = "."
