[project]
name = "container-up-runtime"
version = "0.1.0"
description = "Dependencies for the container_up runtime image"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.0,<1.0.0",
    "uvicorn>=0.35.0,<1.0.0",
    "httpx>=0.28.0,<1.0.0",
    "pydantic>=2.12.0,<3.0.0",
    "aiohttp>=3.9.0,<4.0.0",
    "lark-oapi>=1.5.0,<2.0.0",
    "pycryptodome>=3.20.0",
    "websockets>=16.0,<17.0",
    "loguru>=0.7.3,<1.0.0",
    "boto3>=1.38.0,<2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
